# llm-vista

./: .gitignore  notes.txt  noxfile.py  pyproject.toml  requirements.txt
src/llm_vista/: __init__.py
src/llm_vista/services/: __init__.py
src/llm_vista/services/vector_store/: __init__.py  default.py
src/llm_vista/web/: __init__.py  app.py  launch.py
tests/: test_llm_vista.py
